--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,56 @@
-<p>footer works!</p>
+<div class="row footer-background">
+    <div class="col-lg-8 col-md-10 my-5 mx-auto hidden">
+        <ul class="list-inline text-center">
+            <li class="list-inline-item">
+                <a [routerLink]="['/']" routerLinkActive="router-link-active" class="footer-page-links">Home</a>
+            </li>
+            <li class="list-inline-item">
+                <a [routerLink]="['/about-us']" routerLinkActive="router-link-active" class="footer-page-links">About Us</a>
+            </li>
+            <li class="list-inline-item">
+                <a [routerLink]="['/education']" routerLinkActive="router-link-active" class="footer-page-links">Education</a>
+            </li>
+            <li class="list-inline-item">
+                <a [routerLink]="['/events']" routerLinkActive="router-link-active" class="footer-page-links">Events</a>
+            </li>
+            <li class="list-inline-item">
+                <a [routerLink]="['/get-involved']" routerLinkActive="router-link-active" class="footer-page-links">Get Involved</a>
+            </li>
+        </ul>
+        <ul class="list-inline text-center my-4">
+            <li class="list-inline-item">
+                <a href="https://www.linkedin.com/company/spartan-blockchain-solutions/">
+                    <span class="fa-stack fa-lg">
+                            <i class="fas fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                        </span>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://www.instagram.com/spartanblockchainsolutions/">
+                    <span class="fa-stack fa-lg">
+                            <i class="fas fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                        </span>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://www.facebook.com/msublockchain/">
+                    <span class="fa-stack fa-lg">
+                            <i class="fas fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                        </span>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://www.github.com/spartanblockchain">
+                    <span class="fa-stack fa-lg">
+                            <i class="fas fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                        </span>
+                </a>
+            </li>
+        </ul>
+        <p class="copyright text-muted text-center">Copyright &copy; 2020 Spartan Blockchain Solutions, Inc. All rights reserved.</p>
+    </div>
+</div>
