--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="row footer-background">
+<div class="row no-gutters footer-background">
     <div class="col-lg-8 col-md-10 my-5 mx-auto hidden">
         <ul class="list-inline text-center">
             <li class="list-inline-item">
