F004: Added HTML for page heading and updated global CSS

--- a/src/app/shared/components/page-heading/page-heading.component.html
+++ b/src/app/shared/components/page-heading/page-heading.component.html
@@ -1,2 +1,18 @@
-<p>{{ pageTitle }}</p>
-<p>{{ pageDescription }}</p>
+<header class="masthead hero-bkg-animated" style="background-image: url('assets/images/graphics/cubes2.png')">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 mx-auto">
+                <div class="typewriter page-heading hidden">
+                    <h1 style="text-align: right; font-size: 70px">{{ pageTitle }}</h1>
+                    <hr class="style-two">
+                    <h2 style="color: white; font-size: 18px; font-weight: 400; text-align: right;">{{ pageDescription }}</h2>
+                    <div style="float: right; padding: 30px">
+                        <a class="btn page-scroll" href="#who-are-we" style="border-color: green; border-radius: 8px">Learn
+                  More &darr;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
