--- a/src/styles.css
+++ b/src/styles.css
@@ -206,7 +206,7 @@ img::-moz-selection {
     border-bottom: 1px solid #e9ecef;
     background-color: rgb(255, 255, 255);
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    padding: 16px;
+    padding: 12px;
 }
 
 #mainNav .navbar-brand {
@@ -234,8 +234,9 @@ img::-moz-selection {
 /* Dropdown Button */
 
 #mainNav .dropbtn {
-    font-size: 12px;
-    font-weight: 700;
+    font-size: 13px;
+    color: black;
+    font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
     border: none;
@@ -244,20 +245,17 @@ img::-moz-selection {
     z-index: 1.1;
 }
 
-#mainNav .dropbtn a:hover {
-    font-size: 14px;
+#mainNav .dropbtn:hover {
     text-decoration: none;
-    color: rgb(0, 165, 0);
+    color: rgb(0, 176, 79);
 }
 
 
-/* Dropdown button on hover & focus */
+/* Dropdown button on hover & focus
 
 #mainNav .dropbtn:hover,
 #mainNav .dropbtn:focus {
     /*background-color: rgb(0, 165, 0);*/
-    color: white;
-}
 
 #mainNav i {
     border: solid white;
