--- a/src/app/pages/get-involved/components/contact-form/contact-form.component.html
+++ b/src/app/pages/get-involved/components/contact-form/contact-form.component.html
@@ -1,54 +1,134 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h2 class="text-center">Contact Us</h2>
-        </div>
+<div class="container" *ngIf="!submitted">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="text-center">Contact Us</h2>
     </div>
-    <div class="row">
-        <div class="col-md-8 offset-2">
-            <form class="formstyle" [formGroup]="contactUs" (ngSubmit)="submitForm()">
-                <div class="md-form">
-                    <input mdbInput mdbValidate type="text" id="first" class="form-control" formControlName="firstName">
-                    <label for="first">First Name</label>
-                    <mdb-error *ngIf="inputFirst.invalid && (inputFirst.dirty || inputFirst.touched)">Required</mdb-error>
-                    <mdb-success *ngIf="inputFirst.valid && (inputFirst.dirty || inputFirst.touched)">Input valid</mdb-success>
-                </div>
-                <div class="md-form">
-                    <input mdbInput mdbValidate type="text" id="last" class="form-control" formControlName="lastName">
-                    <label for="last">Last Name</label>
-                    <mdb-error *ngIf="inputLast.invalid && (inputLast.dirty || inputLast.touched)">Required</mdb-error>
-                    <mdb-success *ngIf="inputLast.valid && (inputLast.dirty || inputLast.touched)">Input valid</mdb-success>
-                </div>
-                <div class="md-form">
-                    <input mdbInput mdbValidate type="email" id="email" class="form-control" formControlName="email">
-                    <label for="email">Email</label>
-                    <mdb-error *ngIf="inputEmail.invalid && (inputEmail.dirty || inputEmail.touched)">Please provide valid email</mdb-error>
-                    <mdb-success *ngIf="inputEmail.valid && (inputEmail.dirty || inputEmail.touched)">Input valid</mdb-success>
-                </div>
-                <div class="md-form">
-                    <input mdbInput mdbValidate type="text" id="companyOrg" class="form-control" formControlName="companyOrg">
-                    <label for="companyOrg">Company/Organizations (if applicable)</label>
-                </div>
-                <div class="form-group">
-                    <label>How would you like to get involved?</label>
-                    <select class="browser-default custom-select">
-                    <option selected>Project Proposal</option>
-                    <option value="1">Become a sponsor</option>
-                    <option value="2">Become our partner</option>
-                    <option value="3">Join our case competition</option>
-                    <option value="4">Become a professional advisor</option>
-                    <option value="5">Join our newsletter</option>
-                    <option value="6">Other (describe below)</option>
-                </select>
-                </div>
-                <div class="form-group">
-                    <label for="brief">Please provide a brief description of your interest</label>
-                    <textarea rows="3" mdbInput mdbValidate type="text" id="brief" placeholder="Your message" class="form-control rounded-0 md-textarea" formControlName="briefDescription"></textarea>
-                </div>
-                <div class="form-group">
-                    <button mdbBtn color="success" outline="true" block="true" class="z-depth-0 my-4 waves-effect" mdbWavesEffect type="submit" [disabled]="disabledSubmitButton">Submit</button>
-                </div>
-            </form>
+  </div>
+  <div class="row">
+    <div class="col-md-8 offset-2">
+      <form class="formstyle" [formGroup]="contactUs" (ngSubmit)="submitForm()">
+        <div class="md-form">
+          <input
+            mdbInput
+            mdbValidate
+            type="text"
+            id="first"
+            class="form-control"
+            formControlName="firstName"
+          />
+          <label for="first">First Name</label>
+          <mdb-error
+            *ngIf="
+              inputFirst.invalid && (inputFirst.dirty || inputFirst.touched)
+            "
+            >Required</mdb-error
+          >
+          <mdb-success
+            *ngIf="inputFirst.valid && (inputFirst.dirty || inputFirst.touched)"
+            >Input valid</mdb-success
+          >
         </div>
+        <div class="md-form">
+          <input
+            mdbInput
+            mdbValidate
+            type="text"
+            id="last"
+            class="form-control"
+            formControlName="lastName"
+          />
+          <label for="last">Last Name</label>
+          <mdb-error
+            *ngIf="inputLast.invalid && (inputLast.dirty || inputLast.touched)"
+            >Required</mdb-error
+          >
+          <mdb-success
+            *ngIf="inputLast.valid && (inputLast.dirty || inputLast.touched)"
+            >Input valid</mdb-success
+          >
+        </div>
+        <div class="md-form">
+          <input
+            mdbInput
+            mdbValidate
+            type="email"
+            id="email"
+            class="form-control"
+            formControlName="email"
+          />
+          <label for="email">Email</label>
+          <mdb-error
+            *ngIf="
+              inputEmail.invalid && (inputEmail.dirty || inputEmail.touched)
+            "
+            >Please provide valid email</mdb-error
+          >
+          <mdb-success
+            *ngIf="inputEmail.valid && (inputEmail.dirty || inputEmail.touched)"
+            >Input valid</mdb-success
+          >
+        </div>
+        <div class="md-form">
+          <input
+            mdbInput
+            mdbValidate
+            type="text"
+            id="companyOrg"
+            class="form-control"
+            formControlName="companyOrg"
+          />
+          <label for="companyOrg">Company/Organizations (if applicable)</label>
+        </div>
+        <div class="form-group">
+          <label>How would you like to get involved?</label>
+          <select
+            (change)="selectChangeHandler($event)"
+            class="browser-default custom-select"
+          >
+            <option *ngFor="let o of options">{{ o.name }}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="brief"
+            >Please provide a brief description of your interest</label
+          >
+          <textarea
+            rows="3"
+            mdbInput
+            mdbValidate
+            type="text"
+            id="brief"
+            placeholder="Your message"
+            class="form-control rounded-0 md-textarea"
+            formControlName="briefDescription"
+          ></textarea>
+        </div>
+        <div class="form-group">
+          <button
+            mdbBtn
+            color="success"
+            outline="true"
+            block="true"
+            class="z-depth-0 my-4 waves-effect"
+            mdbWavesEffect
+            type="submit"
+            [disabled]="disabledSubmitButton"
+          >
+            Submit
+          </button>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
+
+<div class="container" *ngIf="submitted">
+  <div class="row">
+    <div
+      style="margin-top:10em; margin-bottom:10em;"
+      class="col-md-12 text-center"
+    >
+      <h2>Submitted. Thank you for contacting us!</h2>
+    </div>
+  </div>
 </div>
