--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -5,3 +5,11 @@
   grid-row-gap:    10px;
   grid-column-gap: 10px;
 }
+
+hr {
+  background-color: #00A500;
+}
+
+.team-header {
+  padding-top: 5%;
+}
