--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,9 +1,19 @@
 .grid {
   display: grid;
-  grid-template-rows:    1fr 1fr 1fr;
+  grid-template-rows:    auto;
   grid-template-columns: 1fr 1fr 1fr;
   grid-row-gap:    10px;
   grid-column-gap: 10px;
+  padding-bottom: 3rem;
+}
+
+.grid-sm {
+  display: grid;
+  grid-template-rows:    auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row-gap:    10px;
+  grid-column-gap: 10px;
+  padding-bottom: 3rem;
 }
 
 hr {
