--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,68 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+        <a href="index.html">
+            <img src="assets/images/logos/sbs-logo.png" style="height: 50px">
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="dropbtn" [routerLink]="['']" routerLinkActive="router-link-active">Home</button>
+                        <div class="dropdown-content" style="background-color: white">
+                            <a class="page-scroll" href="#who-are-we">Our Services</a>
+                            <a class="page-scroll" href="#our-pillars">Our Pillars</a>
+                            <a class="page-scroll" href="#project-proposals">Project Proposals</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="dropbtn" [routerLink]="['/about-us']" routerLinkActive="router-link-active">About Us</button>
+                        <div class="dropdown-content">
+                            <a class="page-scroll" href="about-us#who-are-we">Who Are We?</a>
+                            <a class="page-scroll" href="about-us#sbs-team">Our Team</a>
+                            <a class="page-scroll" href="about-us#advisors">Our Advisors</a>
+                            <a class="page-scroll" href="about-us#partners">Our Partners</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="dropbtn" [routerLink]="['/education']" routerLinkActive="router-link-active">Education</button>
+                        <div class="dropdown-content">
+                            <a class="page-scroll" href="education#what-is-blockchain">What is Blockchain?</a>
+                            <a class="page-scroll" href="education#our-workshops">Our Workshops</a>
+                            <a class="page-scroll" href="education#blockchain-foundations-and-applications">Blockchain:
+                  Foundations and Applications</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="dropbtn" [routerLink]="['/events']" routerLinkActive="router-link-active">Events</button>
+                        <div class="dropdown-content">
+                            <a class="page-scroll" href="events#meetup">Community Meetup</a>
+                            <a class="page-scroll" href="events#case-competition">Pitch Competition</a>
+                            <a class="page-scroll" href="events#upcoming-events">Other Events</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="dropbtn" [routerLink]="['/get-involved']" routerLinkActive="router-link-active">Get Involved</button>
+                        <div class="dropdown-content">
+                            <a class="page-scroll" href="get-involved#open-positions">Open Positions</a>
+                            <a class="page-scroll" href="get-involved#become-a-sponsor">Become a Sponsor</a>
+                            <a class="page-scroll" href="get-involved#join-our-newsletter">Join Our Newsletter</a>
+                            <a class="page-scroll" href="get-involved#contact-us">Contact Us</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
