--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -1,2 +1,151 @@
 <app-page-heading [pageTitle]="TITLE" [pageDescription]="DESCRIPTION"></app-page-heading>
-<p>events works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-lg-10 mx-auto">
+      <section id="meetup">
+        <p></p>
+      </section>
+      <h2 class="section-heading hidden">
+        SPARTAN BLOCKCHAIN SOLUTIONS<br>COMMUNITY MEETUP 2020
+      </h2>
+      <h6 class="hidden" style="text-align: center"><i>Thursday, March 26th | Broad Art Lab - East Lansing, MI |
+        6:00PM - 9:00PM</i></h6>
+      <p></p>
+      <hr width="15%" style="border-width: 7px">
+      <p class="hidden">On the evening of March 26th, Spartan Blockchain Solutions is hosting a Greater Lansing
+        Blockchain
+        community meetup at the Broad Art Lab on Grand River Avenue. The Spartan Blockchain Solutions Community Meetup
+        gives
+        attendees the opportunity to network with invited blockchain & fintech firms from around the Metro Detroit
+        area to discuss the blossoming educational community and startup ecosystem centered around blockchain and
+        its applications around the Midwest. Free admission to the event will be complemented by light food, drinks,
+        and a live band.</p>
+      <hr class="style-eight">
+      <section id="case-competition">
+      </section>
+      <h2 class="section-heading hidden">
+        SPARTAN BLOCKCHAIN INNOVATION COMPETITION 2020
+      </h2>
+      <h6 class="hidden" style="text-align: center"><i>Friday, March 27th | Gaynor Entrepreneurship Lab - East
+        Lansing,
+        MI | 8:30AM - 4:30PM</i></h6>
+      <p></p>
+      <hr width="15%" style="border-width: 7px">
+      <p class="hidden">The Spartan Blockchain Innovation Competition brings together teams from leading academic
+        institutions to compete in a thought-provoking blockchain pitch competition. The event schedule fosters
+        innovation and collaboration through ample networking opportunities spread across technology spaces located
+        around Michigan State's campus. Attendees will gain access to professionals representing enterprise blockchain
+        industry leaders and pitch solutions leveraging blockchain technology to address society's rapidly
+        changing needs. We are proud to provide an inclusive environment for students to interact with
+        disruptive technologies and continue their development as leaders in the blockchain space.</p>
+      <p class="hidden">Are you interested in being involved as a competitor or sponsor in our pitch competition? Use the links below
+        to learn more or apply.</p>
+      <div class="pic_row mb-5">
+        <a target="_blank" class="pic_item" href="downloads/teamprospectus.pdf" download>
+          <div>
+            <h6 class="hidden"><b>Team Prospectus</b></h6>
+          </div>
+        </a>
+        <a target="_blank" class="pic_item" href="downloads/sponsorprospectus.pdf" download>
+          <div>
+            <h6 class="hidden"><b>Sponsorship Prospectus</b></h6>
+          </div>
+        </a>
+        <a target="_blank" class="pic_item"
+           href="https://msu.co1.qualtrics.com/jfe/form/SV_dcXHHe5GZk3S5Dv">
+          <div>
+            <h6 class="hidden"><b>Team Application</b></h6>
+          </div>
+        </a>
+      </div>
+      <hr class="style-eight">
+      <h2 class="section-heading hidden">
+        SPARTAN BLOCKCHAIN INNOVATION COMPETITION 2019
+      </h2>
+      <p></p>
+      <hr width="15%" style="border-width: 7px">
+      <hr style="border-color:white">
+      <h3 class="team-header pb-3 pt-3 hidden" style="color:black">SBIC 2019 WINNERS</h3>
+      <p></p>
+      <div class="pic_row hidden">
+        <a target="_blank" class="pic_item">
+          <div>
+            <img style="width: 80%" src="../../../assets/images/temp/smartifi.png" />
+            <p class="position" style="color:black"><b class="position_name">Most Innovative Solution
+              ($1,500)</b><br><b>Smartifi</b><br>
+              (left to right) Majeed Fardin & Parker Nolan</p>
+          </div>
+        </a>
+        <a target="_blank" class="pic_item">
+          <div>
+            <img style="width: 80%" src="../../../assets/images/temp/folio.png" />
+            <p class="position" style="color:black"> <b class="position_name">Most Feasible Solution
+              ($250)</b><br><b>Folio</b><br>
+              (left to right) Dheera Vuppala & Chase Chapman</p>
+          </div>
+        </a>
+      </div>
+      <p></p>
+      <div class="pic_row hidden">
+        <a target="_blank" class="pic_item">
+          <div>
+            <img style="width: 80%" src="../../../assets/images/temp/presdig.png" />
+            <p class="position" style="color:black"><b class="position_name">Most Impactful Solution
+              ($250)</b><br><b>PresDig</b><br>(left
+              to right) Yunsoo Kim & Nisreen Bahrainwala</p>
+          </div>
+        </a>
+        <a target="_blank" class="pic_item">
+          <div>
+            <img class="profileImgSbs" src="../../../assets/images/temp/nebulous.png" />
+            <p class="position" style="color:black"><b class="position_name">Best Pitch
+              ($250)</b><br><b>Nebulous</b><br>(left
+              to right) Tyler Weisner, Angelo Savich, <br>Samantha Stevons, Chris Nosowsky, & Sawyer Ruben</p>
+          </div>
+        </a>
+      </div>
+      <hr style="border-color:white">
+      <p></p>
+      <h3 class="team-header pb-3 pt-3 hidden" style="color:black">THANK YOU TO OUR SBIC 2019 SPONSORS</h3>
+      <hr width="15%" style="border-width: 7px">
+      <div class="hidden">
+        <img style="width: 46%" src="../../../assets/images/logos/Deloitte-logo.png" />
+        <img style="width: 52%; padding: 0px 0px 0px 30px" src="../../../assets/images/logos/IBM-logo.jpg" />
+        <img style="width: 45%; border-radius: 10%; right: 5%" src="../../../assets/images/logos/spartan-innovations.png" />
+        <img style="width: 52%; padding: 0px 0px 0px 50px" src="../../../assets/images/logos/laketrust-logo.png" />
+        <img style="width: 45%; padding: 0px 0px 0px 0px" src="../../../assets/images/logos/ajboggs-logo.gif" />
+        <img style="width: 44%; padding: 0px 0px 10px 90px; text-align: center" src="../../../assets/images/logos/eos-detroit.png" />
+        <a href="https://www.medium.com/@BountyBase">
+          <img style="width: 44%; padding: 0px 20px 50px 40px; text-align: center" src="../../../assets/images/logos/bountybase-logo.png" />
+        </a>
+      </div>
+      <h3 class="team-header pb-3 pt-3 hidden" style="color:black">SBIC 2019 PARTICIPANT AFFILIATIONS</h3>
+      <hr width="15%" style="border-width: 7px">
+      <div class="hidden">
+        <img style="width: 49%; text-align: center" src="../../../assets/images/logos/blockchain-iu.png" />
+        <img style="width: 49%; text-align: center; padding: 80px 80px 80px 80px"
+             src="../../../assets/images/logos/blockchain-at-michigan.png" />
+        <img style="width: 45%; text-align: center; padding: 20px 0px 70px 30px" src="../../../assets/images/logos/sbs-logo.png" />
+      </div>
+      <hr style="border-color:white">
+      <hr class="style-eight">
+      <section id="upcoming-events">
+        <p></p>
+      </section>
+      <h3 class="team-header pb-3 pt-3 hidden" style="color:black">OTHER EVENTS</h3>
+      <hr width="15%" style="border-width: 7px">
+      <p></p>
+      <h5 class="hidden" style="text-decoration: none">Blockchain Essentials Workshops:</h5>
+      <p class="hidden">Check back for updates on offerings for this workshop or <a
+        href="get-involved.html#join-our-newsletter">join
+        our newsletter</a> to keep up with updates on offerings for this workshop!</p>
+      <h5 class="hidden" style="text-decoration: none">Hyperledger Composer Development Workshops:</h5>
+      <p class="hidden">Check back for updates on offerings for this workshop or <a
+        href="get-involved.html#join-our-newsletter">join
+        our newsletter</a> to keep up with updates on offerings for this workshop!</p>
+      <p></p>
+      <hr style="border-color:white">
+    </div>
+  </div>
+</div>
+
