ng-medium package for medium feed

--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -1,2 +1,2 @@
 <app-page-heading [pageTitle]="TITLE" [pageDescription]="DESCRIPTION"></app-page-heading>
-<p>education works!</p>
+<app-embedded-medium-articles></app-embedded-medium-articles>
