--- a/src/app/pages/education/components/embedded-medium-articles/embedded-medium-articles.component.html
+++ b/src/app/pages/education/components/embedded-medium-articles/embedded-medium-articles.component.html
@@ -1,3 +1,8 @@
-<div class="col-md-8 offset-2">
-    <ng-medium-feed feedUrl="https://medium.com/feed/spartan-blockchain"></ng-medium-feed>
+<div class="row">
+    <div class="col-md-8 offset-2 mt-5">
+        <h2 class="text-center mb-5">Spartan Blockchain Solutions Medium Articles</h2>
+        <lib-ng-embed-medium [feedUrl]="feedUrl"></lib-ng-embed-medium>
+    </div>
 </div>
+
+
