Move Medium articles to home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -107,3 +107,6 @@
     </div>
     <hr>
 </header>
+<h2 class="team-header pb-3 pt-5 hidden" style="color: black; text-align: center">NEWS</h2>
+<hr class="hidden emphasis">
+<app-embedded-medium-articles></app-embedded-medium-articles>
