--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row pt-5">
             <div class="col-lg-12 col-lg-10 mx-auto">
-                <section id="who-are-we">
+                <section id="our-services">
                 </section>
                 <div class="row">
                     <div class="col-lg-7">
@@ -107,6 +107,8 @@
     </div>
     <hr>
 </header>
+<section id="news">
+</section>
 <h2 class="team-header pb-3 pt-5 hidden" style="color: black; text-align: center">NEWS</h2>
 <hr class="hidden emphasis">
 <app-embedded-medium-articles></app-embedded-medium-articles>
