--- a/src/app/shared/components/page-heading/page-heading.component.html
+++ b/src/app/shared/components/page-heading/page-heading.component.html
@@ -7,10 +7,10 @@
                     <h1 style="text-align: right; font-size: 70px">{{ pageTitle }}</h1>
                     <hr class="style-two">
                     <h2 style="color: white; font-size: 21px; font-weight: 500; text-align: right;">{{ pageDescription }}</h2>
-                    <div style="float: right; padding: 30px">
-                        <a class="btn page-scroll" href="#who-are-we" style="border-color: green; border-radius: 8px">Learn
+                    <!-- <div style="float: right; padding: 30px">
+                        <a class="btn page-scroll" href="#who-are-we" style="border-color: green; border-radius: 8px; color: white;">Learn
                   More &darr;</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
