--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -16,6 +16,15 @@
     padding-bottom: 4rem;
 }
 
+.grid-two {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
+    padding-bottom: 4rem;
+}
+
 hr {
     background-color: #00A500;
 }
@@ -25,5 +34,5 @@ hr {
 }
 
 .img-padding {
-    padding: 10px;
+    margin: 0px 20px;
 }
