--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -70,7 +70,7 @@
       <div class="pic_row hidden">
         <a target="_blank" class="pic_item">
           <div>
-            <img style="width: 80%" src="../../../assets/images/temp/smartifi.png" />
+            <img style="width: 80%" src="/src/assets/images/temp/smartifi.png" />
             <p class="position" style="color:black"><b class="position_name">Most Innovative Solution
               ($1,500)</b><br><b>Smartifi</b><br>
               (left to right) Majeed Fardin & Parker Nolan</p>
