fixed images final

--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -70,7 +70,7 @@
       <div class="pic_row hidden">
         <a target="_blank" class="pic_item">
           <div>
-            <img style="width: 80%" src="../../../assets/images/temp/smartifi.png" />
+            <img style="width: 80%" src="assets/images/temp/smartifi.png" />
             <p class="position" style="color:black"><b class="position_name">Most Innovative Solution
               ($1,500)</b><br><b>Smartifi</b><br>
               (left to right) Majeed Fardin & Parker Nolan</p>
@@ -78,7 +78,7 @@
         </a>
         <a target="_blank" class="pic_item">
           <div>
-            <img style="width: 80%" src="../../../assets/images/temp/folio.png" />
+            <img style="width: 80%" src="assets/images/temp/folio.png" />
             <p class="position" style="color:black"> <b class="position_name">Most Feasible Solution
               ($250)</b><br><b>Folio</b><br>
               (left to right) Dheera Vuppala & Chase Chapman</p>
@@ -89,7 +89,7 @@
       <div class="pic_row hidden">
         <a target="_blank" class="pic_item">
           <div>
-            <img style="width: 80%" src="../../../assets/images/temp/presdig.png" />
+            <img style="width: 80%" src="assets/images/temp/presdig.png" />
             <p class="position" style="color:black"><b class="position_name">Most Impactful Solution
               ($250)</b><br><b>PresDig</b><br>(left
               to right) Yunsoo Kim & Nisreen Bahrainwala</p>
@@ -97,7 +97,7 @@
         </a>
         <a target="_blank" class="pic_item">
           <div>
-            <img class="profileImgSbs" src="../../../assets/images/temp/nebulous.png" />
+            <img class="profileImgSbs" src="assets/images/temp/nebulous.png" />
             <p class="position" style="color:black"><b class="position_name">Best Pitch
               ($250)</b><br><b>Nebulous</b><br>(left
               to right) Tyler Weisner, Angelo Savich, <br>Samantha Stevons, Chris Nosowsky, & Sawyer Ruben</p>
@@ -109,23 +109,23 @@
       <h3 class="team-header pb-3 pt-3 hidden" style="color:black">THANK YOU TO OUR SBIC 2019 SPONSORS</h3>
       <hr width="15%" style="border-width: 7px">
       <div class="hidden">
-        <img style="width: 46%" src="../../../assets/images/logos/Deloitte-logo.png" />
-        <img style="width: 52%; padding: 0px 0px 0px 30px" src="../../../assets/images/logos/IBM-logo.jpg" />
-        <img style="width: 45%; border-radius: 10%; right: 5%" src="../../../assets/images/logos/spartan-innovations.png" />
-        <img style="width: 52%; padding: 0px 0px 0px 50px" src="../../../assets/images/logos/laketrust-logo.png" />
-        <img style="width: 45%; padding: 0px 0px 0px 0px" src="../../../assets/images/logos/ajboggs-logo.gif" />
-        <img style="width: 44%; padding: 0px 0px 10px 90px; text-align: center" src="../../../assets/images/logos/eos-detroit.png" />
+        <img style="width: 46%" src="assets/images/logos/Deloitte-logo.png" />
+        <img style="width: 52%; padding: 0px 0px 0px 30px" src="assets/images/logos/IBM-logo.jpg" />
+        <img style="width: 45%; border-radius: 10%; right: 5%" src="assets/images/logos/spartan-innovations.png" />
+        <img style="width: 52%; padding: 0px 0px 0px 50px" src="assets/images/logos/laketrust-logo.png" />
+        <img style="width: 45%; padding: 0px 0px 0px 0px" src="assets/images/logos/ajboggs-logo.gif" />
+        <img style="width: 44%; padding: 0px 0px 10px 90px; text-align: center" src="assets/images/logos/eos-detroit.png" />
         <a href="https://www.medium.com/@BountyBase">
-          <img style="width: 44%; padding: 0px 20px 50px 40px; text-align: center" src="../../../assets/images/logos/bountybase-logo.png" />
+          <img style="width: 44%; padding: 0px 20px 50px 40px; text-align: center" src="assets/images/logos/bountybase-logo.png" />
         </a>
       </div>
       <h3 class="team-header pb-3 pt-3 hidden" style="color:black">SBIC 2019 PARTICIPANT AFFILIATIONS</h3>
       <hr width="15%" style="border-width: 7px">
       <div class="hidden">
-        <img style="width: 49%; text-align: center" src="../../../assets/images/logos/blockchain-iu.png" />
+        <img style="width: 49%; text-align: center" src="assets/images/logos/blockchain-iu.png" />
         <img style="width: 49%; text-align: center; padding: 80px 80px 80px 80px"
-             src="../../../assets/images/logos/blockchain-at-michigan.png" />
-        <img style="width: 45%; text-align: center; padding: 20px 0px 70px 30px" src="../../../assets/images/logos/sbs-logo.png" />
+             src="assets/images/logos/blockchain-at-michigan.png" />
+        <img style="width: 45%; text-align: center; padding: 20px 0px 70px 30px" src="assets/images/logos/sbs-logo.png" />
       </div>
       <hr style="border-color:white">
       <hr class="style-eight">
