--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<header class="masthead" style="background-image: url('assets/images/stock/prism.png'); background-color: black">
+<header class="masthead" style="background-image: url('./assets/images/stock/prism.png'); background-color: black">
     <div class="overlay" style="background-image: linear-gradient(to right,rgba(0,0,0,0.25),rgba(75,75,75,0.2),rgba(175,175,175,0.12))"></div>
     <div class="container" align="center">
         <section id="our-team">
