--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -112,3 +112,6 @@
 <h2 class="team-header pb-3 pt-5 hidden" style="color: black; text-align: center">NEWS</h2>
 <hr class="hidden emphasis">
 <app-embedded-medium-articles></app-embedded-medium-articles>
+<div class="d-flex justify-content-center">
+  <button class="action-button" target="_blank" href="https://medium.com/spartan-blockchain">Read More</button>
+</div>
