--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -113,5 +113,7 @@
 <hr class="hidden emphasis">
 <app-embedded-medium-articles></app-embedded-medium-articles>
 <div class="d-flex justify-content-center">
-  <button class="action-button" target="_blank" href="https://medium.com/spartan-blockchain">Read More</button>
+  <a target="_blank" href="https://medium.com/spartan-blockchain">
+    <button class="action-button">Read More</button>
+  </a>
 </div>
