Add corporate partner

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -89,6 +89,9 @@
             <a href="https://www.mousebelt.com/">
                 <img class="img-padding" style="width: 333px;" src="assets/images/logos/mousebelt.jfif" />
             </a>
+            <a href="https://www.midwestblockchain.org/">
+                <img class="img-padding" style="width: 250px;" src="assets/images/logos/mbc-logo-vector.webp" />
+            </a>
         </div>
     </div>
 </header>
