update MBC logo

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -84,13 +84,13 @@
         <hr class="hidden" width="15%" style="border-width: 7px">
         <div class="mt-4 mb-5 hidden">
             <a href="https://blockchainedu.org/">
-                <img class="img-padding" style="width: 250px;" src="assets/images/logos/blockchain-education-network.png" />
+                <img class="img-padding" style="width: 250px;" src="assets/images/logos/blockchain-education-network.png"/>
             </a>
             <a href="https://www.mousebelt.com/">
-                <img class="img-padding" style="width: 333px;" src="assets/images/logos/mousebelt.jfif" />
+                <img class="img-padding" style="width: 333px;" src="assets/images/logos/mousebelt.jfif"/>
             </a>
-            <a href="https://www.midwestblockchain.org/">
-                <img class="img-padding" style="width: 250px;" src="assets/images/logos/mbc-logo-vector.webp" />
+            <a href="https://www.linkedin.com/company/midwestblockchain/">
+                <img class="img-padding" style="width: 250px;" src="assets/images/logos/mbc-logo.jpeg"/> 
             </a>
         </div>
     </div>
