add device responsiveness to youtube vid

--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -9,9 +9,11 @@
                 </section>
                 <h3 class="team-header pb-3 pt-3 hidden" style="color: black">WHAT IS BLOCKCHAIN?</h3>
                 <hr class="hidden emphasis">
-                <p class="hidden pt-3 pb-5" style="text-align: center">
-                    <iframe width="730" height="400" src="https://www.youtube.com/embed/SSo_EIwHSd4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </p>
+                <div class="hidden pt-3 pb-5 text-center">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="730" height="400" class="embed-responsive-item" src="https://www.youtube.com/embed/SSo_EIwHSd4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
                 <hr>
                 <h3 class="section-heading hidden">
                     BLOCKCHAIN:
