--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -66,13 +66,13 @@
                 <img class="img-padding" style="width: 250px;" src="assets/images/logos/blockchain-at-michigan.png" />
             </a>
             <a href="https://mubc.io/">
-                <img class="img-padding pl-5 pr-5" style="width: 300px;" src="assets/images/logos/mubc.PNG" />
+                <img class="img-padding pl-5 pr-5" style="width: 300px;" src="assets/images/logos/mubc.png" />
             </a>
             <a href="https://www.metllab.com/">
-                <img class="img-padding pr-5" style="width: 400px;" src="assets/images/logos/metl.PNG" />
+                <img class="img-padding pr-5" style="width: 400px;" src="assets/images/logos/metl.png" />
             </a>
             <a>
-                <img class="img-padding" style="width: 280px;" src="assets/images/logos/blockchain-luc.PNG" />
+                <img class="img-padding" style="width: 280px;" src="assets/images/logos/blockchain-luc.png" />
             </a>
         </div>
     </div>
