fixed about us alignment

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -69,7 +69,7 @@
                 <img class="img-padding pl-5 pr-5" style="width: 300px;" src="assets/images/logos/mubc.png" />
             </a>
             <a href="https://www.metllab.com/">
-                <img class="img-padding pr-5" style="width: 400px;" src="assets/images/logos/metl.png" />
+                <img class="img-padding pr-5 metl" style="width: 400px;" src="assets/images/logos/metl.png" />
             </a>
             <a>
                 <img class="img-padding" style="width: 280px;" src="assets/images/logos/blockchain-luc.png" />
@@ -90,7 +90,7 @@
                 <img class="img-padding" style="width: 333px;" src="assets/images/logos/mousebelt.jfif"/>
             </a>
             <a href="https://www.linkedin.com/company/midwestblockchain/">
-                <img class="img-padding" style="width: 250px;" src="assets/images/logos/mbc-logo.jpeg"/> 
+                <img class="img-padding" style="width: 250px;" src="assets/images/logos/mbc-logo.jpeg"/>
             </a>
         </div>
     </div>
