--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,38 +1,49 @@
 .grid {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    padding-bottom: 4rem;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+  padding-bottom: 4rem;
+}
+
+.container{
+  position: relative;
 }
 
 .grid-sm {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    padding-bottom: 4rem;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+  padding-bottom: 4rem;
 }
 
 .grid-two {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    padding-bottom: 4rem;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+  padding-bottom: 4rem;
 }
 
 hr {
-    background-color: #00A500;
+  background-color: #00A500;
 }
 
 .team-header {
-    padding-top: 5%;
+  padding-top: 5%;
 }
 
 .img-padding {
-    margin: 0px 20px;
+  padding: 0px;
+  max-width: 300px;
+  margin: 20px 20px;
 }
+
+.metl{
+  padding-right: 0px !important;
+}
+
